--- a/pages/calls/demos.html
+++ b/pages/calls/demos.html
@@ -163,9 +163,9 @@
                   <div class="section-header">
                     <h2>
                       <a
-                        href="https://forms.gle/CuHP9Q8uafpsN9Nn8"
+                        href="#"
                         class="btn btn-outline-primary btn-lg"
-                        >Submit a Demo</a
+                        ><strike>Submit a Demo</strike></a
                       >
                     </h2>
                   </div>
@@ -178,7 +178,7 @@
                         <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
                             <div class="row schedule-item">
                                 <div class="col-md-5"><time><h6>April 7, 2019
-</h6></time></div>
+                                </h6></time></div>
                                 <div class="col-md-7">
                                     <h6><b>Submission deadline</b></h6>
                                   <p> </p>
