--- a/pages/registration.html
+++ b/pages/registration.html
@@ -131,9 +131,10 @@
           <div class="section-header">
                 <h2>Registration</h2>
                   <p>
-                    Registration will open in March 31, 2019. Stay tuned on
+                    Registration will open very soon. Stay tuned on
                         <a href="https://twitter.com/indabaXmorocco" class="twitter"
-                         >Twitter <i class="fa fa-twitter"></i></a>
+                         >Twitter <i class="fa fa-twitter"></i></a> and <a href="https://www.facebook.com/IndabaXMorocco-372699740233783/" class="facebook"
+                         >Facebook <i class="fa fa-facebook"></i></a>
                   </p>
               </div>
 
