--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -193,7 +193,7 @@
             <col width="400">
               <tr>
                 <td>Abdelaziz Berrado</td>
-                <td>Ecole Mohammedia d'Ingenieurs, Morocco</td>
+                <td>EMI, Mohammed V University, Morocco</td>
               </tr>
               <tr>
                 <td>Abdelhak Mahmoudi</td>
@@ -216,17 +216,12 @@
                 <td>ENSIAS, Morocco </td>
               </tr>
               <tr>
-                <td>Amine Mouafi</td>
-                <td> Sidi Mohamed Ben Abdellah University, Morocco</td>
-              </tr>
-              <tr>
                 <td>Ayoub Karine </td>
-                <td>Haute-Alsace University , France </td>
+                <td>Haute-Alsace University, France </td>
               </tr>
               <tr>
                 <td>Ayoub Tamim</td>
                 <td>ISPM Agadir, Morocco </td>
-              </tr>
               </tr>
               <tr>
                 <td>Brahim Raouyane</td>
@@ -238,7 +233,7 @@
               </tr>
               <tr>
                 <td>Chouaib Moujahdi</td>
-                <td>IS Rabat, Morocco </td>
+                <td>IS, Mohammed V University, Morocco </td>
               </tr>
               <tr>
                 <td>El Mahdi El Mhamedi</td>
@@ -250,11 +245,11 @@
               </tr>
               <tr>
                 <td>Hiba Chougrad </td>
-                <td> Chouiab Doukkalli University, Morocco</td>
+                <td>Chouiab Doukkalli University, Morocco</td>
               </tr>
               <tr>
                 <td>Hicham Laanaya</td>
-                <td> Mohammed V University , Morocco</td>
+                <td>FS, Mohammed V University, Morocco</td>
               </tr>
               <tr>
                 <td>Hicham Zougagh</td>
@@ -262,11 +257,11 @@
               </tr>
               <tr>
                 <td>Hind Lamharhar</td>
-                <td> Mohammed V University, Morocco </td>
+                <td>Mohammed V University, Morocco </td>
               </tr> 
               <tr>
                 <td>Ibtissam Benmiloud</td>
-                <td> MINES-Rabat, Morocco</td>
+                <td>MINES-Rabat, Morocco</td>
               </tr>
               <tr>
                 <td>Jihad Zahir</td>
@@ -276,7 +271,6 @@
                 <td>Khalid El Baamrani</td>
                 <td>Caddi Ayad University, Morocco </td>
               </tr>
-            
               <tr>
                 <td>Khalid Fakhar</td>
                 <td>Mohammed V University, Morocco </td>
@@ -295,11 +289,11 @@
               </tr>    	  
               <tr>
                 <td>Meryem El mouhtadi</td>
-                <td>UEMF , Morocco </td>
+                <td>UEMF, Morocco </td>
               </tr>	
               <tr>
                 <td>Mhamed Zineddine</td>
-                <td>UEMF , Morocco </td>
+                <td>UEMF, Morocco </td>
               </tr>
               <tr>
                 <td>Mohammed Baslam</td>
@@ -315,7 +309,7 @@
               </tr>
               <tr>
                 <td>Mourad Gridach </td>
-                <td> Ibn Zohr /Colorado University, Morocco/USA</td>
+                <td>Ibn Zohr /Colorado University, Morocco/USA</td>
               </tr>
               <tr>
                 <td>Mohammed Khalil</td>
@@ -323,7 +317,7 @@
               </tr>
               <tr>
                 <td>Naoual Berbiche</td>
-                <td>Mohammed V University, Morocco </td>
+                <td>EST, Mohammed V University, Morocco </td>
               </tr>            
               <tr>
                 <td>Noureddine Idboufker</td>
@@ -339,7 +333,7 @@
               </tr>   
               <tr>
                 <td>Ounsa Roudies</td>
-                <td>Mohammed V University, Morocco </td>
+                <td>EMI, Mohammed V University, Morocco </td>
               </tr>            
               <tr>
                 <td>Raja ElAssali</td>
@@ -355,7 +349,7 @@
               </tr>
               <tr>
                 <td>Said Ousguine</td>
-                <td> Mohammed V University, Morocco</td>
+                <td>Mohammed V University, Morocco</td>
               </tr>
               <tr>
                 <td>Tarik Ljouad</td>
@@ -371,11 +365,15 @@
               </tr>
               <tr>
                 <td>Yassine Al Amrani</td>
-                <td>Ensa Tetouan , Morocco </td>
+                <td>Ensa Tetouan, Morocco </td>
               </tr>      
               <tr>
                 <td>Younes Kabbadj </td>
-                <td>Ibn Zohr University, Morocco </td>
+                <td>FS, Ibn Zohr University, Morocco </td>
+              </tr>
+              <tr>
+                <td>Youssef Elbenan </td>
+                <td>FS, Mohammed V University, Morocco </td>
               </tr>
         </table>
         <br> </br>
