--- a/pages/event/keynotes-new.html
+++ b/pages/event/keynotes-new.html
@@ -364,10 +364,31 @@
                 </div>
                 <div class="col-md-9">
                   <h4>
-                    Affiliation
+                    Digital Partners SA. Switzerland
                   </h4>
                   <p>
-                    Bio
+                    Mr. Anys Boukli is Chairman and Chief Executive Officer of
+                    Digital Partners SA. Anys combines 20 years of International
+                    Leadership experience. Expert in Digital Strategy,
+                    Transformation, Technologies, Disruptive Business Models,
+                    Board Advisory. Innovation Expert at the European Union and
+                    the United Nations (Artificial Intelligence, Big Data &
+                    Analytics, Open Innovation, Data Driven Policy Making).
+                    Digital Innovation Process, Business Innovation, Innovation
+                    Maturity assessment, Digital Roadmap. Mr. Boukli served as
+                    Chief Operating Officer for Switzerland & Middle East at
+                    Sword Group SE and was responsible for developing the
+                    regional market strategy for the services arm of the
+                    business in the Swiss and MENA market Previously Mr. Boukli
+                    was a Partner for the EMEA region within Cambridge
+                    Technology Partners / Novell before joining Bedag
+                    Informatique as Head of the French-speaking Swiss market and
+                    board member. Prior to that, he held various management
+                    positions in the Consulting and IT industries in Europe. Mr.
+                    Boukli holds a State Engineering degree in IT, as well as
+                    several Management and Leadership degrees from the
+                    International Institute for Management Development (IMD) in
+                    Lausanne and the Malik Institute in St-Galles.
                   </p>
                 </div>
               </div>
