--- a/pages/event/keynotes-new.html
+++ b/pages/event/keynotes-new.html
@@ -379,7 +379,7 @@
                     Chief Operating Officer for Switzerland & Middle East at
                     Sword Group SE and was responsible for developing the
                     regional market strategy for the services arm of the
-                    business in the Swiss and MENA market Previously Mr. Boukli
+                    business in the Swiss and MENA market. Previously, Mr. Boukli
                     was a Partner for the EMEA region within Cambridge
                     Technology Partners / Novell before joining Bedag
                     Informatique as Head of the French-speaking Swiss market and
