--- a/pages/event/keynotes.html
+++ b/pages/event/keynotes.html
@@ -395,32 +395,6 @@
 
               <hr class="row" />
 
-              <div class="row">
-                <div class="col-md-3">
-                  <center>
-                    <img
-                      class="rounded-circle"
-                      src="../../img/speakers/issam.jpg"
-                      alt="Issam Alaoui"
-                    />
-                    <br />
-                    <br />
-                    <h4>
-                      Issam Alaoui
-                    </h4>
-                  </center>
-                </div>
-                <div class="col-md-9">
-                  <h4>
-                    Affiliation
-                  </h4>
-                  <p>
-                    Bio
-                  </p>
-                </div>
-              </div>
-
-              <hr class="row" />
             </div>
             <!-- End Bio ////////////////////////////////////////////////////////////////-->
 
@@ -633,37 +607,31 @@
                 </div>
                 <div class="col-md-9">
                   <h4>
-                    Title
+                    Digital Partners SA. Switzerland
                   </h4>
                   <p>
-                    Subject
-                  </p>
-                </div>
-              </div>
-
-              <hr class="row" />
-
-              <div class="row">
-                <div class="col-md-3">
-                  <center>
-                    <img
-                      class="rounded-circle"
-                      src="../../img/speakers/issam.jpg"
-                      alt="Issam Alaoui"
-                    />
-                    <br />
-                    <br />
-                    <h4>
-                      Issam Alaoui
-                    </h4>
-                  </center>
-                </div>
-                <div class="col-md-9">
-                  <h4>
-                    Title
-                  </h4>
-                  <p>
-                    Subject
+                    Mr. Anys Boukli is Chairman and Chief Executive Officer of
+                    Digital Partners SA. Anys combines 20 years of International
+                    Leadership experience. Expert in Digital Strategy,
+                    Transformation, Technologies, Disruptive Business Models,
+                    Board Advisory. Innovation Expert at the European Union and
+                    the United Nations (Artificial Intelligence, Big Data &
+                    Analytics, Open Innovation, Data Driven Policy Making).
+                    Digital Innovation Process, Business Innovation, Innovation
+                    Maturity assessment, Digital Roadmap. Mr. Boukli served as
+                    Chief Operating Officer for Switzerland & Middle East at
+                    Sword Group SE and was responsible for developing the
+                    regional market strategy for the services arm of the
+                    business in the Swiss and MENA market. Previously, Mr. Boukli
+                    was a Partner for the EMEA region within Cambridge
+                    Technology Partners / Novell before joining Bedag
+                    Informatique as Head of the French-speaking Swiss market and
+                    board member. Prior to that, he held various management
+                    positions in the Consulting and IT industries in Europe. Mr.
+                    Boukli holds a State Engineering degree in IT, as well as
+                    several Management and Leadership degrees from the
+                    International Institute for Management Development (IMD) in
+                    Lausanne and the Malik Institute in St-Galles.
                   </p>
                 </div>
               </div>
