--- a/pages/program-pre.html
+++ b/pages/program-pre.html
@@ -180,7 +180,7 @@
                       alt="Halima Bensmail"
                     />
                   </div>
-                  <h4>Keynote 1<span> Halima Bensmail</span></h4>
+                  <h4>Keynote 1:<span> Halima Bensmail</span></h4>
                   <p>
                     Developing new machine learning algorithm for computational
                     Biology:
@@ -389,7 +389,7 @@
                     <img src="../img/challenge.jpeg" alt="Data Challenge" />
                   </div>
                   <h4>Data Challenge<span></span></h4>
-                  <p></p>
+                  <p>Winners Announcement</p>
                 </div>
               </div>
 
