--- a/index.html
+++ b/index.html
@@ -304,6 +304,14 @@
                                     alt="Loubna Bnabbou Bensmail"
                                   /> 
                                 </a>
+                                <a href="./pages/event/keynotes.html">  
+                                  <img
+                                    class="rounded-circle"
+                                    width="60"
+                                    src="./img/speakers/anys.jpg"
+                                    alt="Anys Boukli"
+                                  />  
+                                </a>
                                 </p>
                               </div>
                           </div>  
