--- a/pages/registration.html
+++ b/pages/registration.html
@@ -142,7 +142,7 @@
             <div class="container wow fadeInUp">
               <div class="section-content">
                 <center>
-                  
+                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdXRvOpXPzPw_5FavhxO_61YtHAVfVM6CgttxyFFo6Qk0zsCQ/viewform?embedded=true" width="640" height="2610" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                 </center>
                 <br></br>
               </div>
