--- a/pages/registration.html
+++ b/pages/registration.html
@@ -131,7 +131,13 @@
           <div class="section-header">
                 <h2>Registration</h2>
                   <p>
-                    Registration will open very soon. Stay tuned on
+                    Registration is now open. Please note that, due to limited places, only some requests will be accepted.
+                  </p>
+                  <p>
+                    Registration will close on <strong>April 25th, 2019</strong>.
+                  </p>
+                  <p>
+                    Stay tuned on
                         <a href="https://twitter.com/indabaXmorocco" class="twitter"
                          >Twitter <i class="fa fa-twitter"></i></a> and <a href="https://www.facebook.com/IndabaXMorocco-372699740233783/" class="facebook"
                          >Facebook <i class="fa fa-facebook"></i></a>
