--- a/pages/registration.html
+++ b/pages/registration.html
@@ -131,18 +131,24 @@
           <div class="section-header">
                 <h2>Registration</h2>
                   <p>
-                    Registration is now open. Please note that, due to limited places, only some requests will be accepted.
+                    Registration is now open.
                   </p>
                   <p>
-                    Registration will close on <strong>April 25th, 2019</strong>.
+                    Please note that, due to limited places, only some requests will be accepted.
                   </p>
                   <p>
+                    Registration will close on <strong><a href="#">April 25th, 2019</a></strong>.
+                  </p>
+                  
+            <!--
+            <p>
                     Stay tuned on
                         <a href="https://twitter.com/indabaXmorocco" class="twitter"
                          >Twitter <i class="fa fa-twitter"></i></a> and <a href="https://www.facebook.com/IndabaXMorocco-372699740233783/" class="facebook"
                          >Facebook <i class="fa fa-facebook"></i></a>
                   </p>
               </div>
+            --> 
 
           <div class="row">
             <div class="container wow fadeInUp">
