--- a/pages/registration.html
+++ b/pages/registration.html
@@ -131,15 +131,14 @@
           <div class="section-header">
             <h2>Registration</h2>
               <p>
-                Registration is now open.
+                To Register, please fill in the form below.
               </p>
               <p>
-                Please note that, due to limited places, only some requests will be accepted.
+                Note that, due to limited places, only some requests will be accepted.
               </p>
               <p>
                 Registration will close on <strong><a href="#">April 25th, 2019</a></strong>.
               </p>
-              <br></br>
           </div> 
             <!--
             <p>
