--- a/pages/event/keynotes.html
+++ b/pages/event/keynotes.html
@@ -607,7 +607,7 @@
                 </div>
                 <div class="col-md-9">
                   <h4>
-                    Digital Partners SA. Switzerland
+                    Big Data and Artificial Intelligence Vertical scenarios building a Horizontal platform
                   </h4>
                   <p>
                     Mr. Anys Boukli is Chairman and Chief Executive Officer of
