--- a/pages/program.html
+++ b/pages/program.html
@@ -220,7 +220,7 @@
                     <img src="../img/speakers/anys.jpg" alt="Anys Boukli" />
                   </div>
                   <h4>Keynote 3: <span> Anys Boukli</span></h4>
-                  <p>Title</p>
+                  <p>Big Data and Artificial Intelligence Vertical scenarios building a Horizontal platform</p>
                 </div>
               </div>
 
