--- a/pages/program.html
+++ b/pages/program.html
@@ -343,6 +343,10 @@
                     Aperçu sur les approches d'interprétabilité des modèles du
                     Deep Learning
                   </p>
+                  <p>
+                    <a href = "https://lnkd.in/deFq-dS"> Slides, </a>
+                    <a href = "https://lnkd.in/dhpM_KX"> Colab </a>
+                  </p>
                 </div>
               </div>
 
