--- a/pages/program.html
+++ b/pages/program.html
@@ -210,6 +210,7 @@
                   </div>
                   <h4>Keynote 2: <span> Mounir Ghogho</span></h4>
                   <p>Can AI predict the future?</p>
+                  <p> <a href = "#"> Slides, </a> </p>
                 </div>
               </div>
 
@@ -221,6 +222,7 @@
                   </div>
                   <h4>Keynote 3: <span> Anys Boukli</span></h4>
                   <p>Big Data and Artificial Intelligence Vertical scenarios building a Horizontal platform</p>
+                  <p> <a href = "#">  </a> </p>
                 </div>
               </div>
 
@@ -252,6 +254,7 @@
                   <p>
                     Case of the Moroccan Capital Market
                   </p>
+                  <p> <a href = "#"> Slides, </a> </p>
                 </div>
               </div>
 
@@ -266,6 +269,7 @@
                   </div>
                   <h4>Keynote 5:<span> Hicham Zmarrou</span></h4>
                   <p>The Road to Enterprise AI</p>
+                  <p> <a href = "#"> Slides, </a> </p>
                 </div>
               </div>
 
@@ -275,6 +279,7 @@
                   <h4>Panel<span></span></h4>
 
                   <p>How Morocco can Leverage Artificial Intelligence?</p>
+                  <p> <a href = "#"> Slides, </a> </p>
                   <div class="speaker">
                     <img
                       src="../img/speakers/halima.jpg"
@@ -383,6 +388,7 @@
                   </div>
                   <h4>Tutoriel 2: <span> Abdellah Chkifa</span></h4>
                   <p>An introduction to gradient descent algorithms</p>
+                  <p> <a href = "#"> Slides, </a> </p>
                 </div>
               </div>
 
