--- a/pages/program.html
+++ b/pages/program.html
@@ -269,7 +269,7 @@
                   </div>
                   <h4>Keynote 5:<span> Hicham Zmarrou</span></h4>
                   <p>The Road to Enterprise AI</p>
-                  <p> <a href = "#"> Slides, </a> </p>
+                  <p> <a href = "../materials/zmarrou_slides.pdf"> Slides, </a> </p>
                 </div>
               </div>
 
@@ -279,7 +279,7 @@
                   <h4>Panel<span></span></h4>
 
                   <p>How Morocco can Leverage Artificial Intelligence?</p>
-                  <p> <a href = "#"> Slides, </a> </p>
+                  <p> <a href = "../materials/panel.pdf"> Slides, </a> </p>
                   <div class="speaker">
                     <img
                       src="../img/speakers/halima.jpg"
@@ -349,7 +349,7 @@
                     Deep Learning
                   </p>
                   <p>
-                    <a href = "https://lnkd.in/deFq-dS"> Slides, </a>
+                    <a href = "../materials/hajji_slides.pdf"> Slides, </a>
                     <a href = "https://lnkd.in/dhpM_KX"> Colab </a>
                   </p>
                 </div>
