--- a/pages/program.html
+++ b/pages/program.html
@@ -210,7 +210,7 @@
                   </div>
                   <h4>Keynote 2: <span> Mounir Ghogho</span></h4>
                   <p>Can AI predict the future?</p>
-                  <p> <a href = "#"> Slides, </a> </p>
+                  <p> <a href = "#"> Slides </a> </p>
                 </div>
               </div>
 
@@ -254,7 +254,7 @@
                   <p>
                     Case of the Moroccan Capital Market
                   </p>
-                  <p> <a href = "#"> Slides, </a> </p>
+                  <a href = "#"> Slides </a>
                 </div>
               </div>
 
@@ -269,7 +269,7 @@
                   </div>
                   <h4>Keynote 5:<span> Hicham Zmarrou</span></h4>
                   <p>The Road to Enterprise AI</p>
-                  <p> <a href = "../materials/zmarrou_slides.pdf"> Slides, </a> </p>
+                  <p> <a href = "../materials/zmarrou_slides.pdf"> Slides </a> </p>
                 </div>
               </div>
 
@@ -277,9 +277,7 @@
                 <div class="col-md-2"><time>03:30 PM</time></div>
                 <div class="col-md-10">
                   <h4>Panel<span></span></h4>
-
-                  <p>How Morocco can Leverage Artificial Intelligence?</p>
-                  <p> <a href = "../materials/panel.pdf"> Slides, </a> </p>
+                  <p> <a href = "../materials/panel.pdf"> How Morocco can Leverage Artificial Intelligence? Slides </a> </p>
                   <div class="speaker">
                     <img
                       src="../img/speakers/halima.jpg"
@@ -388,7 +386,7 @@
                   </div>
                   <h4>Tutoriel 2: <span> Abdellah Chkifa</span></h4>
                   <p>An introduction to gradient descent algorithms</p>
-                  <p> <a href = "#"> Slides, </a> </p>
+                  <p> <a href = "#"> Slides </a> </p>
                 </div>
               </div>
 
