--- a/pages/program.html
+++ b/pages/program.html
@@ -210,7 +210,7 @@
                   </div>
                   <h4>Keynote 2: <span> Mounir Ghogho</span></h4>
                   <p>Can AI predict the future?</p>
-                  <p> <a href = "#"> Slides </a> </p>
+                  <p> <a href = "#"> (Slides) </a> </p>
                 </div>
               </div>
 
@@ -251,10 +251,7 @@
                     Machine Learning and Deep Learning, Challenges and
                     Applications in Developing World:
                   </p>
-                  <p>
-                    Case of the Moroccan Capital Market
-                  </p>
-                  <a href = "#"> Slides </a>
+                  <a href = "#"> Case of the Moroccan Capital Market (Slides) </a>
                 </div>
               </div>
 
@@ -269,7 +266,7 @@
                   </div>
                   <h4>Keynote 5:<span> Hicham Zmarrou</span></h4>
                   <p>The Road to Enterprise AI</p>
-                  <p> <a href = "../materials/zmarrou_slides.pdf"> Slides </a> </p>
+                  <p> <a href = "../materials/zmarrou_slides.pdf"> (Slides) </a> </p>
                 </div>
               </div>
 
@@ -277,7 +274,8 @@
                 <div class="col-md-2"><time>03:30 PM</time></div>
                 <div class="col-md-10">
                   <h4>Panel<span></span></h4>
-                  <p> <a href = "../materials/panel.pdf"> How Morocco can Leverage Artificial Intelligence? Slides </a> </p>
+                  <p> How Morocco can Leverage Artificial Intelligence? </p>
+                  <p> <a href = "../materials/panel.pdf"> (Slides) </a> </p>
                   <div class="speaker">
                     <img
                       src="../img/speakers/halima.jpg"
@@ -347,8 +345,8 @@
                     Deep Learning
                   </p>
                   <p>
-                    <a href = "../materials/hajji_slides.pdf"> Slides, </a>
-                    <a href = "https://lnkd.in/dhpM_KX"> Colab </a>
+                    <a href = "../materials/hajji_slides.pdf"> (Slides, </a>
+                    <a href = "https://lnkd.in/dhpM_KX"> Colab Code) </a>
                   </p>
                 </div>
               </div>
@@ -386,7 +384,7 @@
                   </div>
                   <h4>Tutoriel 2: <span> Abdellah Chkifa</span></h4>
                   <p>An introduction to gradient descent algorithms</p>
-                  <p> <a href = "#"> Slides </a> </p>
+                  <p> <a href = "#"> (Slides) </a> </p>
                 </div>
               </div>
 
