--- a/pages/program.html
+++ b/pages/program.html
@@ -384,7 +384,7 @@
                   </div>
                   <h4>Tutoriel 2: <span> Abdellah Chkifa</span></h4>
                   <p>An introduction to gradient descent algorithms</p>
-                  <p> <a href = "#"> (Slides) </a> </p>
+                  <p> <a href = "https://slides.com/abdellahchkifa/indabaxmorocco19#"> (Slides) </a> </p>
                 </div>
               </div>
 
