--- a/pages/program.html
+++ b/pages/program.html
@@ -210,7 +210,6 @@
                   </div>
                   <h4>Keynote 2: <span> Mounir Ghogho</span></h4>
                   <p>Can AI predict the future?</p>
-                  <p> <a href = "#"> (Slides) </a> </p>
                 </div>
               </div>
 
@@ -251,7 +250,7 @@
                     Machine Learning and Deep Learning, Challenges and
                     Applications in Developing World:
                   </p>
-                  <a href = "#"> Case of the Moroccan Capital Market (Slides) </a>
+                  <p> href = "#"> Case of the Moroccan Capital Market</p>
                 </div>
               </div>
 
