--- a/pages/posters.html
+++ b/pages/posters.html
@@ -159,20 +159,6 @@
 
           <div>
             <h4>
-              <a href="../materials/posters/Abida.pdf">
-                Overview of buildings semantic segmentation approaches using
-                Deep learning</a
-              >
-            </h4>
-            <p>
-              Abdelilah Adiba
-            </p>
-          </div>
-
-          <hr class="row" />
-
-          <div>
-            <h4>
               <a href="../materials/posters/Abouzbiba.pdf"
                 >Voice Patgology Detection</a
               >
@@ -241,7 +227,7 @@
 
           <div>
             <h4>
-              <a href="El-Kaddoury2.pdf"
+              <a href="../materials/posters/El-Kaddoury2.pdf"
                 >Indoor Localization using Deep Reinforcement Learning</a
               >
             </h4>
@@ -303,20 +289,6 @@
             </h4>
             <p>
               Oumaima Hourrane and El Habib Benlahmar
-            </p>
-          </div>
-
-          <hr class="row" />
-
-          <div>
-            <h4>
-              <a href="../materials/posters/Kasmi.pdf">
-                Methylome Restriction-Modification Sites Prediction in Bacteria
-                using Markov Models</a
-              >
-            </h4>
-            <p>
-              Yassine Kasmi
             </p>
           </div>
 
@@ -397,7 +369,19 @@
           </div>
 
           <hr class="row" />
-          Zouidine.pdf
+
+          <div>
+            <h4>
+              <a href="../materials/posters/Zouidine.pdf">
+                Reinforcement learning use cases</a
+              >
+            </h4>
+            <p>
+              Mohamed Zouidine and Mohammed Khalil
+            </p>
+          </div>
+
+          <hr class="row" />
         </div>
       </section>
     </main>
