--- a/pages/posters.html
+++ b/pages/posters.html
@@ -137,7 +137,7 @@
               </a>
             </h4>
             <p>
-              Oussama Atiq
+              Oussama Aatiq and Mohamed Talea
             </p>
           </div>
 
@@ -151,7 +151,7 @@
               >
             </h4>
             <p>
-              Youness Abakarim
+              Youness Abakarim, Mohamed Lahby and Abdelbaki Attioui
             </p>
           </div>
 
@@ -177,7 +177,8 @@
               >
             </h4>
             <p>
-              Nouhaila Bensalah
+              Nouhaila BENSALAH, Habib AYAD, Abdellah ADIB and Abdelhamid IBN EL
+              FAROUK
             </p>
           </div>
 
@@ -205,7 +206,7 @@
               >
             </h4>
             <p>
-              El fateyh Fatima Ezzahra
+              Fatima Zahra EL FATEHY, Mohammed KHALIL and Abdellah ADIB
             </p>
           </div>
 
@@ -246,7 +247,7 @@
               </a>
             </h4>
             <p>
-              Lamiae Elmendili
+              El Mendili Lamiae, Chougrad Mehdi, Sebari Imane and Puissant Anne
             </p>
           </div>
 
@@ -260,7 +261,7 @@
               >
             </h4>
             <p>
-              Lahcen El Bouny
+              Lahcen EL bouny, Mohammed Khalil and Abdellah Adib
             </p>
           </div>
 
@@ -301,7 +302,7 @@
               >
             </h4>
             <p>
-              Ismael Kone
+              Ismaël Koné and Lahsen Boulmane
             </p>
           </div>
 
@@ -314,7 +315,7 @@
               </a>
             </h4>
             <p>
-              Fatima Zahra Lahlou
+              Fatima Zahra Lahlou, Houda Benbrahim and Ismail KASSOU
             </p>
           </div>
 
@@ -322,7 +323,9 @@
 
           <div>
             <h4>
-              <a href="../materials/posters/Ouanan.pdf">PubFace</a>
+              <a href="../materials/posters/Ouanan.pdf"
+                >PubFace “Know the people around you”</a
+              >
             </h4>
             <p>
               Hamid Ouanan
@@ -350,7 +353,7 @@
               >
             </h4>
             <p>
-              Mouad Riyad
+              Mouad RIYAD, Mohammed KHALIL, Abdellah ADIB
             </p>
           </div>
 
@@ -364,7 +367,7 @@
               >
             </h4>
             <p>
-              Sara Sekkate
+              Sara SEKKATE, Mohammed KHALIL and Abdellah ADIB
             </p>
           </div>
 
