--- a/pages/program.html
+++ b/pages/program.html
@@ -313,7 +313,10 @@
                   <div class="speaker">
                     <img src="../img/break.jpg" alt="Berrad Marocain" />
                   </div>
-                  <h4>Break & Poster Session</h4>
+                  <h4>Break & Poster Session </h4>
+                  
+                  <a class="nav-link" href="https://indabaxmorocco.github.io/pages/posters.html">(See Posters Here)</a>
+                  
                   <p>Tea, Coffee and Networking</p>
                 </div>
               </div>
