--- a/pages/posters.html
+++ b/pages/posters.html
@@ -109,7 +109,7 @@
                 >
               </div>
             </li>
-            <li class="menu-active"><a href="#">Program</a></li>
+            <li><a href="program.html">Program</a></li>
             <li><a href="application.html">Application</a></li>
             <li><a href="registration.html">Registration</a></li>
             <li><a href="sponsorship.html">Sponsorship</a></li>
