--- a/pages/program.html
+++ b/pages/program.html
@@ -386,8 +386,9 @@
                   </div>
                   <h4>Tutoriel 2: <span> Abdellah Chkifa</span></h4>
                   <p>An introduction to gradient descent algorithms</p>
-                  <p> <a href = "../materials/abdellah_chkifa/abdellah.html"> (Slides Part 1</a> , 
-                      <a href = "https://slides.com/abdellahchkifa/indabaxmorocco19#/"> Part 2) </a> 
+                  <p>
+                    <a href = "https://slides.com/abdellahchkifa/indabaxmorocco19#/"> (Slides Part 1</a> , 
+                    <a href = "../materials/abdellah_chkifa/abdellah.html"> Part 2)</a>  
                   </p>
                 </div>
               </div>
