--- a/pages/program.html
+++ b/pages/program.html
@@ -388,7 +388,9 @@
                   <p>An introduction to gradient descent algorithms</p>
                   <p>
                     <a href = "https://slides.com/abdellahchkifa/indabaxmorocco19#/"> (Slides Part 1</a> , 
-                    <a href = "../materials/abdellah_chkifa/abdellah.html"> Part 2)</a>  
+                    <a href = "../materials/abdellah_chkifa/abdellah.html"> Part 2</a> ,
+                    <a href = "../materials/abdellah_chkifa/chkifa_indabax_2019.ipynb"> Code)</a> 
+                    
                   </p>
                 </div>
               </div>
