--- a/pages/program.html
+++ b/pages/program.html
@@ -347,8 +347,8 @@
                     Deep Learning
                   </p>
                   <p>
-                    <a href = "../materials/hajji_slides.pdf"> (Slides, </a>
-                    <a href = "https://lnkd.in/dhpM_KX"> Colab Code) </a>
+                    <a href = "../materials/hajji_slides.pdf"> (Slides</a>,
+                    <a href = "https://lnkd.in/dhpM_KX"> Code) </a>
                   </p>
                 </div>
               </div>
